# der-py

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  test-pypi.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
src/der_py/: __init__.py  __main__.py
src/der_py/clients/: __init__.py  goodreads.py  wiki.py
src/der_py/codegen/: __init__.py  encoder.py  representation.py
src/der_py/fun/: __init__.py  registry.py
src/der_py/obsidian/: __init__.py  _types.py  auto_alias.py  use_alias.py
src/der_py/scripts/: __init__.py  goodreads.py  obsidian_toolkit.py
tests/: conftest.py  test_main.py
tests/clients/: test_goodreads.py  test_wiki.py
tests/codegen/: test_encoder.py  test_representation.py
tests/fun/: test_fun.py  test_registry.py
tests/obsidian/: test_use_alias.py
tests/scripts/: fixture.csv  test_goodreads.py
