[tool.poetry]
name = "der.py"
version = "0.1.0"
authors = ["Rareș Cosma <rares@getbetter.ro>"]
description = "And together bind them..."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rarescosma/der.py"
repository = "https://github.com/rarescosma/der.py"
keywords = ["python", "derpy", "dependency-injection", "scheduler", "clients", "utils", "toolkit"]

[tool.poetry.scripts]
derpy = "der_py.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["der_py"]

[tool.coverage.report]
show_missing = true
fail_under = 100
