[tool.poetry]
name = "der-py"
version = "0.3.0"
authors = ["Rareș Cosma <rares@getbetter.ro>"]
description = "And together bind them..."
license = "MIT"
readme = "README.md"
documentation = "https://der-py.readthedocs.io"
homepage = "https://github.com/rarescosma/der-py"
repository = "https://github.com/rarescosma/der-py"
keywords = ["python", "derpy", "dependency-injection", "scheduler", "clients", "utils", "toolkit"]

[tool.poetry.scripts]
derpy = "der_py.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.24.0"
desert = "^2020.1.6"
marshmallow = "^3.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
mypy = "^0.790"
flake8-annotations = "^2.4.1"
flake8-docstrings = "^1.5.0"
xdoctest = "^0.15.0"
sphinx = "^3.3.0"
sphinx-autodoc-typehints = "^1.11.1"
codecov = "^2.1.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 80

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["der_py"]

[tool.coverage.report]
show_missing = true
